[package]
name = "simple-pwm-controller-rs"
version = "0.1.0"
authors = ["ayumu-bekki <ayumu@bekki.jp>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "simple-pwm-controller-rs"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.97"
esp-idf-hal = "0.45.2"

[build-dependencies]
embuild = "0.33"

[package.metadata.esp-idf-sys]
esp_idf_components = ["esp32", "main"] 
# Check $ cargo build -vv
# Exclude WiFi Components (https://github.com/esp-rs/esp-idf-sys/blob/master/BUILD-OPTIONS.md)
# Enable Components
#   app_update bootloader bootloader_support cxx driver efuse esp_app_format esp_bootloader_format esp_common esp_hw_support esp_mm 
#   esp_partition esp_pm esp_ringbuf esp_rom esp_system esp_timer esptool_py freertos hal heap log main mbedtls newlib partition_table pthread riscv soc spi_flash

